[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = "0.8"
tracing = "0.1"
thiserror = "1"
dashmap = "5.3.4"
reqwest = "0.11"
sled = "0.34"
tempfile = "3"
tokio = { version = "1.20.1", features = ["full" ] }
flate2 = "1" # gzip compression

[dev-dependencies]
anyhow = "1"
async-prost = "0.2.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
tracing-subscriber = "0.3.15"

[build-dependencies]
prost-build = "0.8"