[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kvs"
path = "src/server.rs"

[[bin]]
name = "kvc"
path = "src/client.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = "0.8"
tracing = "0.1"
thiserror = "1"
dashmap = "5.3.4"
reqwest = "0.11"
sled = "0.34"
tempfile = "3"
tokio = { version = "1.20.1", features = ["full" ] }
flate2 = "1" # gzip compression
anyhow = "1"
tracing-subscriber = "0.3.15"
tokio-rustls = "0.22"
rustls-native-certs = "0.5"
futures = "0.3"

[dev-dependencies]
async-prost = "0.2.1"
tokio-util = { version = "0.7", features = ["codec"] }
certify = "0.3.1"


[build-dependencies]
prost-build = "0.8"
